<resources>
    <string name="mapbox_access_token">sk.eyJ1IjoidGF2amluamlrYSIsImEiOiJjazFwYTAycG8wc2E5M25xa2sxbTIyZjNiIn0.fXO6Hc1jXtQcD4vWR_2snw</string>
    <string name="def_pub_access_token">pk.eyJ1IjoidGF2amluamlrYSIsImEiOiJjangyeWZhbGowNjlvNDRxanAzaWN1ajA3In0.MMn8ev6y77myx5f6lFleCw</string>
    <string name="app_name">Vowel</string>
    <string name="welcome_to_vowel">Welcome to Vowel</string>
    <string name="profile">profile</string>
    <string name="title_activity_drawer_n_map">drawer_n_map</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Profile Name</string>
    <string name="nav_header_subtitle">UZ Security Official</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_main2">Online Users</string>
    <string name="this_is_where_my_map_will_fit">This is where my map will fit</string>
    <string name="broadcast_call">Broadcast call</string>
    <string name="group_call">Group call</string>
    <string name="calls">Select Contact</string>
    <string name="location">Location</string>
    <string name="user_profile">User Profile</string>
    <string name="upload_profile">Upload Profile</string>
    <string name="change_password">Change Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="logout">Logout</string>
    <string name="first_name">First Name</string>
    <string name="surname">Surname</string>
    <string name="ec_number">EC NUMBER</string>
    <string name="password">Password</string>
    <string name="pin">PIN (- - - -)</string>
    <string name="sign_in">Sign in</string>
    <string name="log_in">Log in</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_unicast_contacts">UnicastContacts</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_notifications">Notifications</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="messages">Messages</string>
    <string name="upload_profile_picture">Upload Profile Picture</string>
    <string name="log_out">Log out</string>
    <string name="alert_field">Please enter the following</string>
    <string name="please_select_the_following">Please Enter the following</string>
    <string name="enter_details">Enter the following</string>
    <string name="cancel_s">Cancel</string>
    <string name="save">Save</string>
    <string name="delete_acc">Delete Account</string>
    <string name="notifications__main2">Notifications</string>
    <string name="contacts">Contacts</string>
    <string name="title_activity_splash_screen">Vowel</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="callsrecs">Calls</string>
    <string name="title_activity_bootstrap">BootstrapActivity</string>
    <string name="ip_address_00_00_00_00">(IP ADDRESS) 00.00.00.00</string>
    <string name="connection_status">Connection status</string>
    <string name="ip_address">IP ADDRESS</string>
    <string name="connection_statusT">Connection Status</string>
    <string name="manual_bootstrapt">Manual Bootstrap</string>
    <string name="connect">Connect</string>
    <string name="status">Device connected, Address: </string>
    <string name="disconnect">Disconnect</string>

    <string name="title_activity_on_call">Calling…</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="endcall">endCall</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="end_call">End Call</string>
    <string name="broadcast_message">Broadcast Message</string>
    <string name="new_location" />
    <string name="please_enter_the_security_passphrase">Please Enter the security passphrase</string>
    <string name ="passphrase">11111</string>
    <string name="please_enter_new_password">Please Enter New Password</string>
</resources>
