<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginActivity.LoginActivity"
    android:background="@color/background_blue">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/darker_bars">
  <TextView
      android:id="@+id/w_note"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:text="@string/welcome_to_vowel"
      android:textStyle="bold"
      android:layout_centerHorizontal="true"
      android:padding="8dp"
      android:textSize="30sp"
      android:textColor="@color/text_white"
      android:background="@color/darker_bars"
      />

  <View
      android:layout_below="@id/w_note"
      android:layout_width="match_parent"
      android:layout_height="2dp"
      android:background="@color/text_white"/>
</RelativeLayout>

  <RelativeLayout
      android:id="@+id/edit_text_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
    <View style="@style/Divider"/>
    <EditText
        android:id="@+id/f_name"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:textSize="20sp"
        android:hint="@string/first_name"
        android:inputType="text"
        android:padding="24dp"
        android:textColorHint="@color/text_white"
        android:textColor="@color/text_white"
        android:importantForAutofill="no"
        tools:ignore="UnusedAttribute" />

    <EditText
        android:id="@+id/s_name"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/f_name"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        android:textColorHint="@color/text_white"
        android:textColor="@color/text_white"
        android:hint="@string/surname"
        android:padding="24dp"
        android:inputType="textPersonName"
        android:importantForAutofill="no"
        tools:ignore="UnusedAttribute" />

    <EditText
        android:id="@+id/ec_number"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/s_name"
        android:layout_marginTop="8dp"
        android:textColorHint="@color/text_white"
        android:textColor="@color/text_white"
        android:textSize="20sp"
        android:hint="@string/ec_number"
        android:padding="24dp"
        android:inputType="number"
        android:importantForAutofill="no"
        tools:ignore="TextFields,UnusedAttribute" />
    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ec_number"
        android:textColorHint="@color/text_white"
        android:textColor="@color/text_white"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        android:hint="@string/password"
        android:padding="24dp"
        android:importantForAutofill="no"
        tools:ignore="UnusedAttribute" />

  </RelativeLayout>
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_alignParentBottom="true"
      android:padding="12dp">

    <Button
        android:id="@+id/btnSign_up"
        android:layout_gravity="start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_white"
        android:text="@string/sign_in"
        android:background="@color/darker_bars"
        android:onClick="onClick"
        android:padding="16dp"
        style="?android:attr/buttonBarStyle" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:background="@color/darker_bars"
        android:textColor="@color/text_white"
        android:onClick="onClick"
        android:layout_gravity="end"
        android:layout_alignParentEnd="true"
        android:padding="16dp"
        style="?android:attr/buttonBarStyle"/>
  </RelativeLayout>

</RelativeLayout>